# pwnode

./: README.md  meson.build
resources/: resources.xml  window.ui
src/: main.c  main.h  pwnode.c  pwnode.h
